trabajo en clase

--- a/PrimeraVezCss/index.html
+++ b/PrimeraVezCss/index.html
@@ -4,15 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>css</title>
+    <title>carta</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello World <small>Santiago</small></h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident quia in neque distinctio nihil architecto numquam, nesciunt ratione dicta minima, aut facere soluta rerum explicabo corrupti. Adipisci tempore illum cum!</p>
-    <div class="myClase">Hello</div>
-    <p id="myParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate rem doloremque libero harum ad, hic numquam nulla, accusantium vero id doloribus veniam laboriosam facilis, omnis magnam ea commodi amet officiis.</p>
-    <h3 data-name="myData">Santiago</h3>
-    <h1 class="myClase">Otro titulo</h1>
+    <header>
+        <nav>
+            <h1>Santiago</h1>
+            <ul>
+                <li><a href="#">Info 1</a></li>
+                <li><a href="#">Info 2</a></li>
+                <li><a href="#">Info 3</a></li>
+                <li><a href="#">Info 4</a></li>
+                <li><a href="#">Info 5</a></li>
+            </ul>
+        </nav>
+    </header>
+    <article>
+        <div>
+            <h1>Hola mundo</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore obcaecati vero atque quidem maxime eveniet at architecto voluptas quam, rerum, facilis quod! Laboriosam laudantium voluptatem optio fuga id quidem tempore.</p>
+            <button>Boton</button>
+        </div>
+    </article>
 </body>
 </html>
